OO-8354: rework delete modals in curriculum management